# Homework_webpython_10

./: .gitignore  main.py  models.py  pyproject.toml
Bestquotes/Bestquotes/: settings.py  urls.py
Bestquotes/quotesapp/: forms.py  urls.py  views.py
Bestquotes/quotesapp/templates/quotesapp/: base.html  index.html  quote.html
Bestquotes/users/: views.py
alembic/: env.py
json/: authors.json
